Various updates to the deconvolution and smoothing algorithms.